--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-markdown-email-links",
     "displayName": "MarkDown Email Links",
     "description": "Highlights emails in MarkDown and makes them clickable",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "publisher": "TomasHubelbauer",
     "repository": {
         "type": "git",
@@ -17,6 +17,24 @@
     "activationEvents": [
         "onLanguage:markdown"
     ],
+    "contributes": {
+        "configuration": {
+            "title": "MarkDown Email Links",
+            "properties": {
+                "markDownEmailLinks.handler": {
+                    "type": "string",
+                    "enum": [
+                        "mailto",
+                        "fastmail",
+                        "gmail",
+                        "outlook",
+                        "yahoo"
+                    ],
+                    "default": "mailto"
+                }
+            }
+        }
+    },
     "main": "./out/extension",
     "scripts": {
         "vscode:prepublish": "npm run compile",
